Izvoz CSV za potne naloge
Program naredi CSV datoteko za izbrani potni nalog. CSV se
nato lahko z mail mergom združi v Wordovo predlogo. Vrednosti so
ločene s podpičjem. Če bo zadeva funkcionirala, bomo na isti
način rešili celotno printanje.

--- a/potninalogi.ui
+++ b/potninalogi.ui
@@ -602,12 +602,12 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="btn_brisi">
+      <widget class="QPushButton" name="btn_izvozi">
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
-        <string>Briši</string>
+        <string>Izvozi CSV</string>
        </property>
       </widget>
      </item>
