--- a/racun.ui
+++ b/racun.ui
@@ -35,7 +35,11 @@
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QLineEdit" name="txt_id"/>
+           <widget class="QLineEdit" name="txt_id">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+           </widget>
           </item>
           <item row="2" column="0">
            <widget class="QLabel" name="label_2">
@@ -476,9 +480,9 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="btn_brisi">
+      <widget class="QPushButton" name="btn_izpisi">
        <property name="text">
-        <string>Briši</string>
+        <string>Izpiši CSV</string>
        </property>
       </widget>
      </item>
