Modalnost oken, pravilna varnostna kopija, osveževanje oken, predračun-račun
Precej sprememb:
1) Okna so sedaj aplikacijsko modalna, kar pomeni, da je novo okno vedno
na vrhu in da so okna pod njim neaktivna
2) Varnostno kopijo baze program naredi ob vsakem zagonu, shrani jo v
uporabniški direktorij kot .BubiRacun/kopija
3) Iz predračuna naredi račun tako, da kopira podatke o računu in tudi o
pripadajočih storitvah kot novi vnosi v tabelo.
4) Pri vnosu potnega naloga -> potovanja ob spremembah v tabeli ni
osveževal okna potni nalogi. To je rešeno, upajmo da ne zgolj začasno.

--- a/glavnookno.ui
+++ b/glavnookno.ui
@@ -19,6 +19,9 @@
   <property name="windowTitle">
    <string>BenRačun: glavno okno</string>
   </property>
+  <property name="layoutDirection">
+   <enum>Qt::LeftToRight</enum>
+  </property>
   <property name="toolButtonStyle">
    <enum>Qt::ToolButtonTextOnly</enum>
   </property>
