--- a/stroski.ui
+++ b/stroski.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>stroski</class>
  <widget class="QDialog" name="stroski">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
