--- a/wid_kuponi.ui
+++ b/wid_kuponi.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>wid_kuponi</class>
  <widget class="QWidget" name="wid_kuponi">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
