--- a/wid_podjetje.ui
+++ b/wid_podjetje.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>wid_podjetje</class>
  <widget class="QWidget" name="wid_podjetje">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
