--- a/uporabnik.ui
+++ b/uporabnik.ui
@@ -9,18 +9,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>877</width>
-    <height>651</height>
+    <width>840</width>
+    <height>612</height>
    </rect>
   </property>
   <property name="focusPolicy">
    <enum>Qt::StrongFocus</enum>
   </property>
   <property name="windowTitle">
-   <string>Vnos podatkov o uporabniku</string>
+   <string/>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_3">
-   <item>
+  <layout class="QGridLayout" name="gridLayout_4">
+   <item row="0" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -95,10 +95,17 @@
                 <height>0</height>
                </size>
               </property>
+              <property name="text">
+               <string>txt_ime</string>
+              </property>
              </widget>
             </item>
             <item row="1" column="1">
-             <widget class="QLineEdit" name="txt_priimek"/>
+             <widget class="QLineEdit" name="txt_priimek">
+              <property name="text">
+               <string>txt_priimek</string>
+              </property>
+             </widget>
             </item>
             <item row="2" column="1">
              <widget class="QDateEdit" name="txt_rojstni">
@@ -120,20 +127,33 @@
               </property>
              </widget>
             </item>
-            <item row="3" column="1">
-             <widget class="QPlainTextEdit" name="txt_naslov"/>
-            </item>
             <item row="4" column="1">
-             <widget class="QLineEdit" name="txt_telefon"/>
+             <widget class="QLineEdit" name="txt_telefon">
+              <property name="text">
+               <string>txt_telefon</string>
+              </property>
+             </widget>
             </item>
             <item row="5" column="1">
-             <widget class="QLineEdit" name="txt_gsm"/>
+             <widget class="QLineEdit" name="txt_gsm">
+              <property name="text">
+               <string>txt_gsm</string>
+              </property>
+             </widget>
             </item>
             <item row="6" column="1">
-             <widget class="QLineEdit" name="txt_email"/>
+             <widget class="QLineEdit" name="txt_email">
+              <property name="text">
+               <string>txt_email</string>
+              </property>
+             </widget>
             </item>
             <item row="7" column="1">
-             <widget class="QLineEdit" name="txt_url"/>
+             <widget class="QLineEdit" name="txt_url">
+              <property name="text">
+               <string>txt_url</string>
+              </property>
+             </widget>
             </item>
             <item row="2" column="0">
              <widget class="QLabel" name="label_11">
@@ -143,10 +163,18 @@
              </widget>
             </item>
             <item row="8" column="1">
-             <widget class="QLineEdit" name="txt_avto"/>
+             <widget class="QLineEdit" name="txt_avto">
+              <property name="text">
+               <string>txt_avto</string>
+              </property>
+             </widget>
             </item>
-            <item row="9" column="1">
-             <widget class="QLineEdit" name="txt_registracija"/>
+            <item row="10" column="1">
+             <widget class="QLineEdit" name="txt_registracija">
+              <property name="text">
+               <string>txt_registracija</string>
+              </property>
+             </widget>
             </item>
             <item row="8" column="0">
              <widget class="QLabel" name="label_20">
@@ -155,12 +183,112 @@
               </property>
              </widget>
             </item>
-            <item row="9" column="0">
+            <item row="10" column="0">
              <widget class="QLabel" name="label_21">
               <property name="text">
                <string>Registrska številka</string>
               </property>
              </widget>
+            </item>
+            <item row="9" column="0">
+             <widget class="QLabel" name="label_24">
+              <property name="text">
+               <string>Model avtomobila</string>
+              </property>
+             </widget>
+            </item>
+            <item row="9" column="1">
+             <widget class="QLineEdit" name="txt_model">
+              <property name="text">
+               <string>txt_model</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="1">
+             <layout class="QFormLayout" name="formLayout_4">
+              <item row="3" column="0">
+               <widget class="QComboBox" name="txt_posta">
+                <property name="minimumSize">
+                 <size>
+                  <width>150</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="currentIndex">
+                 <number>0</number>
+                </property>
+                <item>
+                 <property name="text">
+                  <string>txt_posta</string>
+                 </property>
+                </item>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLineEdit" name="txt_naslov">
+                <property name="text">
+                 <string>txt_naslov</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QLineEdit" name="txt_naslov_st">
+                <property name="maximumSize">
+                 <size>
+                  <width>50</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>txt_naslov_st</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="1">
+               <widget class="QLineEdit" name="txt_postna_stevilka">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>150</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>txt_postna_stevilka</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_26">
+                <property name="text">
+                 <string>Naslov</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QLabel" name="label_27">
+                <property name="text">
+                 <string>Hišna št.</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="label_28">
+                <property name="text">
+                 <string>Poštna št.</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QLabel" name="label_29">
+                <property name="text">
+                 <string>Pošta</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
            </layout>
           </item>
@@ -213,6 +341,9 @@
                 <height>0</height>
                </size>
               </property>
+              <property name="text">
+               <string>txt_id</string>
+              </property>
               <property name="frame">
                <bool>true</bool>
               </property>
@@ -226,7 +357,11 @@
              </widget>
             </item>
             <item row="1" column="1">
-             <widget class="QLineEdit" name="txt_uporabnik"/>
+             <widget class="QLineEdit" name="txt_uporabnik">
+              <property name="text">
+               <string>txt_uporabnik</string>
+              </property>
+             </widget>
             </item>
             <item row="2" column="0">
              <widget class="QLabel" name="label_5">
@@ -244,6 +379,9 @@
             </item>
             <item row="3" column="1">
              <widget class="QLineEdit" name="txt_ponovnogeslo">
+              <property name="text">
+               <string>txt_ponovnogeslo</string>
+              </property>
               <property name="echoMode">
                <enum>QLineEdit::Password</enum>
               </property>
@@ -253,6 +391,9 @@
              <layout class="QHBoxLayout" name="horizontalLayout_4">
               <item>
                <widget class="QLineEdit" name="txt_geslo">
+                <property name="text">
+                 <string>txt_geslo</string>
+                </property>
                 <property name="echoMode">
                  <enum>QLineEdit::Password</enum>
                 </property>
@@ -285,6 +426,38 @@
               </item>
              </layout>
             </item>
+            <item row="4" column="1">
+             <widget class="QComboBox" name="txt_dovoljenja">
+              <item>
+               <property name="text">
+                <string>txt_dovoljenja</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="4" column="0">
+             <widget class="QLabel" name="label_23">
+              <property name="text">
+               <string>Dovoljenja</string>
+              </property>
+             </widget>
+            </item>
+            <item row="5" column="1">
+             <widget class="QComboBox" name="txt_podjetje">
+              <item>
+               <property name="text">
+                <string>txt_podjetje</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="5" column="0">
+             <widget class="QLabel" name="label_25">
+              <property name="text">
+               <string>Podjetje</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </item>
          </layout>
@@ -309,7 +482,13 @@
              </widget>
             </item>
             <item row="0" column="1">
-             <widget class="QComboBox" name="txt_naziv"/>
+             <widget class="QComboBox" name="txt_naziv">
+              <item>
+               <property name="text">
+                <string>txt_naziv</string>
+               </property>
+              </item>
+             </widget>
             </item>
             <item row="1" column="0">
              <widget class="QLabel" name="label_17">
@@ -336,7 +515,13 @@
              </widget>
             </item>
             <item row="2" column="1">
-             <widget class="QComboBox" name="txt_pogodba"/>
+             <widget class="QComboBox" name="txt_pogodba">
+              <item>
+               <property name="text">
+                <string>txt_pogodba</string>
+               </property>
+              </item>
+             </widget>
             </item>
             <item row="4" column="0">
              <widget class="QLabel" name="label_19">
@@ -363,7 +548,11 @@
              </widget>
             </item>
             <item row="5" column="1">
-             <widget class="QLineEdit" name="txt_davcna"/>
+             <widget class="QLineEdit" name="txt_davcna">
+              <property name="text">
+               <string>txt_davcna</string>
+              </property>
+             </widget>
             </item>
             <item row="6" column="0">
              <widget class="QLabel" name="label_15">
@@ -373,7 +562,11 @@
              </widget>
             </item>
             <item row="6" column="1">
-             <widget class="QLineEdit" name="txt_emso"/>
+             <widget class="QLineEdit" name="txt_emso">
+              <property name="text">
+               <string>txt_emso</string>
+              </property>
+             </widget>
             </item>
             <item row="7" column="0">
              <widget class="QLabel" name="label_16">
@@ -383,7 +576,11 @@
              </widget>
             </item>
             <item row="7" column="1">
-             <widget class="QLineEdit" name="txt_ttr"/>
+             <widget class="QLineEdit" name="txt_tekoci_racun">
+              <property name="text">
+               <string>txt_tekoci_racun</string>
+              </property>
+             </widget>
             </item>
             <item row="3" column="0">
              <widget class="QLabel" name="label_22">
@@ -410,7 +607,7 @@
               <item>
                <widget class="QCheckBox" name="txt_zaposlen">
                 <property name="text">
-                 <string/>
+                 <string>txt_zaposlen</string>
                 </property>
                </widget>
               </item>
@@ -464,7 +661,7 @@
      </item>
     </layout>
    </item>
-   <item>
+   <item row="1" column="0">
     <spacer name="verticalSpacer_3">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -477,7 +674,7 @@
      </property>
     </spacer>
    </item>
-   <item>
+   <item row="2" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <spacer name="horizontalSpacer">
@@ -527,7 +724,6 @@
   <tabstop>txt_ime</tabstop>
   <tabstop>txt_priimek</tabstop>
   <tabstop>txt_rojstni</tabstop>
-  <tabstop>txt_naslov</tabstop>
   <tabstop>txt_telefon</tabstop>
   <tabstop>txt_gsm</tabstop>
   <tabstop>txt_email</tabstop>
@@ -546,7 +742,7 @@
   <tabstop>txt_odpustitev</tabstop>
   <tabstop>txt_davcna</tabstop>
   <tabstop>txt_emso</tabstop>
-  <tabstop>txt_ttr</tabstop>
+  <tabstop>txt_tekoci_racun</tabstop>
   <tabstop>btn_sprejmi</tabstop>
  </tabstops>
  <resources/>
