--- a/uporabnik.ui
+++ b/uporabnik.ui
@@ -9,9 +9,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>840</width>
-    <height>612</height>
+    <width>983</width>
+    <height>615</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1677721</width>
+    <height>16777215</height>
+   </size>
   </property>
   <property name="focusPolicy">
    <enum>Qt::StrongFocus</enum>
@@ -210,8 +216,14 @@
                <widget class="QComboBox" name="txt_posta">
                 <property name="minimumSize">
                  <size>
-                  <width>150</width>
+                  <width>250</width>
                   <height>0</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>300</width>
+                  <height>16777215</height>
                  </size>
                 </property>
                 <property name="currentIndex">
@@ -247,11 +259,17 @@
               <item row="3" column="1">
                <widget class="QLineEdit" name="txt_postna_stevilka">
                 <property name="enabled">
-                 <bool>false</bool>
+                 <bool>true</bool>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>100</width>
+                  <height>0</height>
+                 </size>
                 </property>
                 <property name="maximumSize">
                  <size>
-                  <width>150</width>
+                  <width>100</width>
                   <height>16777215</height>
                  </size>
                 </property>
@@ -263,7 +281,7 @@
               <item row="0" column="0">
                <widget class="QLabel" name="label_26">
                 <property name="text">
-                 <string>Naslov</string>
+                 <string>Ulica</string>
                 </property>
                </widget>
               </item>
@@ -645,19 +663,6 @@
         </spacer>
        </item>
       </layout>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
      </item>
     </layout>
    </item>
