--- a/projekti.ui
+++ b/projekti.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Projekti</string>
+   <string/>
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
    <item row="0" column="0">
@@ -235,7 +235,7 @@
             <item row="0" column="3">
              <widget class="QLabel" name="label_11">
               <property name="text">
-               <string>Znesek</string>
+               <string>Znesek za plačilo</string>
               </property>
              </widget>
             </item>
