--- a/stranke.ui
+++ b/stranke.ui
@@ -9,12 +9,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>993</width>
-    <height>858</height>
+    <width>884</width>
+    <height>704</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Urejanje podatkov o stranki</string>
+   <string/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_5">
    <item>
@@ -26,9 +26,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
-        <width>955</width>
-        <height>986</height>
+        <y>-205</y>
+        <width>846</width>
+        <height>992</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_5">
@@ -260,7 +260,7 @@
            <item>
             <widget class="QGroupBox" name="groupBox_2">
              <property name="title">
-              <string>Osnovni podatki</string>
+              <string>Osebni podatki</string>
              </property>
              <layout class="QGridLayout" name="gridLayout">
               <item row="0" column="0">
@@ -413,7 +413,7 @@
                 <item row="3" column="0">
                  <widget class="QLabel" name="label_7">
                   <property name="text">
-                   <string>Email</string>
+                   <string>Elektronski naslov</string>
                   </property>
                  </widget>
                 </item>
@@ -450,14 +450,14 @@
              <layout class="QGridLayout" name="gridLayout_3">
               <item row="0" column="0">
                <layout class="QFormLayout" name="formLayout_4">
-                <item row="0" column="0">
+                <item row="1" column="0">
                  <widget class="QLabel" name="label_9">
                   <property name="text">
                    <string>Opomba</string>
                   </property>
                  </widget>
                 </item>
-                <item row="0" column="1">
+                <item row="1" column="1">
                  <widget class="QPlainTextEdit" name="txt_opomba">
                   <property name="maximumSize">
                    <size>
@@ -467,14 +467,14 @@
                   </property>
                  </widget>
                 </item>
-                <item row="1" column="0">
+                <item row="0" column="0">
                  <widget class="QLabel" name="label_11">
                   <property name="text">
                    <string>Izobraževalna ustanova</string>
                   </property>
                  </widget>
                 </item>
-                <item row="1" column="1">
+                <item row="0" column="1">
                  <widget class="QLineEdit" name="txt_ustanova"/>
                 </item>
                </layout>
@@ -576,6 +576,13 @@
                </spacer>
               </item>
              </layout>
+            </item>
+            <item>
+             <widget class="QLabel" name="label_12">
+              <property name="text">
+               <string>Ime in priimek</string>
+              </property>
+             </widget>
             </item>
             <item>
              <widget class="QLineEdit" name="txt_vir_besedilo"/>
@@ -1051,7 +1058,7 @@
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
-        <string>Izbrisi</string>
+        <string>Izbris stranke</string>
        </property>
       </widget>
      </item>
@@ -1068,7 +1075,7 @@
      <item>
       <widget class="QPushButton" name="btn_vnesi">
        <property name="text">
-        <string>Vnesi</string>
+        <string>Vnesi stranko</string>
        </property>
       </widget>
      </item>
@@ -1096,7 +1103,6 @@
   <tabstop>txt_email</tabstop>
   <tabstop>txt_spletnastran</tabstop>
   <tabstop>txt_opomba</tabstop>
-  <tabstop>txt_ustanova</tabstop>
   <tabstop>txt_vir</tabstop>
   <tabstop>txt_vir_id</tabstop>
   <tabstop>txt_vir_kupon</tabstop>
