Urejanje naslovov dialogov, glavnega okna ter poimenovanje prikaza tabel.
Naslov vseh oken je poenoten: "BenRačun: ime okna". Pri glavnem oknu se
naslov razširi z "BenRačun: glavno okno - ime tabele".
Glavno okno je pridobilo novo polje, kamor se izpiše ime tabele, ki jo
trenutno prikazuje. Če se tabela umakne, se naslov in omenjeno polje
vrneta v prvotno stanje.
Pri prikazu tabel znotraj glavnega okna so gumbi enotno poimenovani z
"Vnos novega XYZ" in "Izbris XYZ".

--- a/opravila.ui
+++ b/opravila.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Urejanje opravil</string>
+   <string>BenRačun: Urejanje opravila</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_12">
    <item row="0" column="0">
