--- a/racun.ui
+++ b/racun.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Izdaja in urejanje računov</string>
+   <string>BenRačun: Urejanje izdanega računa</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
    <item row="0" column="0">
