--- a/glavnookno.ui
+++ b/glavnookno.ui
@@ -37,6 +37,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="lbl_pozicija">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer_3">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
