--- a/kuponi.ui
+++ b/kuponi.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Urejanje kuponov</string>
+   <string>BenRačun: Urejanje kupona</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
