--- a/podjetje.ui
+++ b/podjetje.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string/>
+   <string>BenRačun: Urejanje podjetja</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="2" column="0">
