--- a/potninalogi.ui
+++ b/potninalogi.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Urejanje potnih nalogov</string>
+   <string>BenRačun: Urejanje potnega naloga</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_5">
    <item row="0" column="0">
