--- a/potovanja.ui
+++ b/potovanja.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>BenRačun: Urejanje potovanja</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
