--- a/prijava.ui
+++ b/prijava.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Vnesite prijavne podatke</string>
+   <string>BenRačun: Prijava v aplikacijo</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
