--- a/wid_kuponi.ui
+++ b/wid_kuponi.ui
@@ -35,14 +35,14 @@
      <item>
       <widget class="QPushButton" name="btn_nov">
        <property name="text">
-        <string>Nov vnos</string>
+        <string>Vnos novega kupona</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btn_brisi">
        <property name="text">
-        <string>Briši</string>
+        <string>Izbris kupona</string>
        </property>
       </widget>
      </item>
