--- a/wid_stroski.ui
+++ b/wid_stroski.ui
@@ -38,14 +38,14 @@
      <item>
       <widget class="QPushButton" name="btn_nov">
        <property name="text">
-        <string>Nov vnos</string>
+        <string>Vnos novega stroška</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btn_brisi">
        <property name="text">
-        <string>Briši</string>
+        <string>Izbris stroška</string>
        </property>
       </widget>
      </item>
