Dodano osnovno okno urejanja popustov
Sedaj se osnovne vrednosti popustov določajo centralno v svojem oknu. V
posodobitvah naslednjih dialogov (stranka, projekt, racun, opravilo) bodo
dodane tudi nove vrednosti popustov iz nove baze. Te posodobitve se bodo
vezale na ločene Commit-e, saj bodo vsebovale centralno prenovo dialogov.

--- a/glavnookno.ui
+++ b/glavnookno.ui
@@ -187,6 +187,7 @@
     <addaction name="actionProjekti"/>
     <addaction name="separator"/>
     <addaction name="actionKuponi"/>
+    <addaction name="actionPopusti"/>
    </widget>
    <widget class="QMenu" name="menuNastavitve">
     <property name="title">
@@ -260,6 +261,11 @@
   <action name="actionKuponi">
    <property name="text">
     <string>Kuponi</string>
+   </property>
+  </action>
+  <action name="actionPopusti">
+   <property name="text">
+    <string>Popusti</string>
    </property>
   </action>
  </widget>
